argo/apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      nodeSelector:
        node-role: light
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.4.4
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config-source
          configMap:
            name: homepage-config
        - name: config
          emptyDir: {}
